Pontoon: Update French (fr) localization of Foundation website
Localization authors:
- Théo Chevalier <theo.chevalier11@gmail.com>

--- a/fr/LC_MESSAGES/django.po
+++ b/fr/LC_MESSAGES/django.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-13 16:25+0000\n"
-"PO-Revision-Date: 2019-11-17 20:25+0000\n"
+"PO-Revision-Date: 2019-12-09 17:28+0000\n"
 "Last-Translator: Théo Chevalier <theo.chevalier11@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -209,7 +209,7 @@ msgstr "Afficher plus de résultats"
 
 #: network-api/networkapi/wagtailpages/templates/wagtailpages/pages/load-more-regrets.html:4
 msgid "Load more stories"
-msgstr "Afficher plus d’anecdotes"
+msgstr "Afficher plus de témoignages"
 
 #: network-api/networkapi/wagtailpages/templates/wagtailpages/pages/youtube_regrets_page.html:36 network-api/networkapi/wagtailpages/templates/wagtailpages/pages/youtube_regrets_page.html:37
 msgid "Join Mozilla"
