--- a/es/LC_MESSAGES/django.po
+++ b/es/LC_MESSAGES/django.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-13 16:25+0000\n"
-"PO-Revision-Date: 2020-01-03 08:20+0000\n"
+"PO-Revision-Date: 2020-01-03 08:59+0000\n"
 "Last-Translator: Théo Chevalier <theo.chevalier11@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -234,7 +234,7 @@ msgstr "Activismo"
 
 #: network-api/networkapi/wagtailpages/templates/wagtailpages/static/initiatives_page.html:33
 msgid "Internet Health Report"
-msgstr "Informe sobre la salud de Internet"
+msgstr "Informe de salud de Internet"
 
 #: network-api/networkapi/wagtailpages/templates/wagtailpages/static/initiatives_page.html:34
 msgid "Fellowships"
